[package]
name = "image-culling-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { version = "0.25.9", features = ["rayon"] }
eframe = { git = "https://github.com/MarkGhebrial/egui", branch = "clean" }
chrono = "0.4.43"
indicatif = "0.18.4"
rayon = "1.12.0"
lru = "0.18.0"
async-fs = "2.2.0"
